feat: Update URLs and templates for new page structure

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
           <div class="app-brand demo">
-            <a href="{% url 'index' %}" class="app-brand-link"><img src="{% static 'assets/img/branding/tahto3.png' %}" width="80px" /></a>
+            <a href="{% url 'table_admin' %}" class="app-brand-link"><img src="{% static 'assets/img/branding/tahto3.png' %}" width="80px" /></a>
           </div>
 
           <div class="menu-inner-shadow"></div>
