--- a/apps/conhecimento/templates/delete_meumodelo_confirm.html
+++ b/apps/conhecimento/templates/delete_meumodelo_confirm.html
@@ -14,7 +14,7 @@
           <form method="POST">
             {% csrf_token %}
             <button type="submit" class="btn btn-danger">Excluir</button>
-            <a href="{% url 'index' %}" class="btn btn-secondary">Cancelar</a>
+            <a href="{% url 'table_admin' %}" class="btn btn-secondary">Cancelar</a>
           </form>
         </div>
       </div>
