--- a/apps/conhecimento/templates/create_meumodelo.html
+++ b/apps/conhecimento/templates/create_meumodelo.html
@@ -36,10 +36,11 @@
 
                     {{ form.validade.errors }}
                     {{ form.validade|as_crispy_field }}
-
-                    {{ form.texto.errors }}
-                    {{ form.texto.label_tag }}
-                    {{ form.texto }} <!-- CKEditor -->
+                    
+                    <label for="id_texto">{{ form.texto.label_tag }}</label>
+                    <div class="form-group">
+                        {{ form.texto }}  <!-- Renderiza o campo do CKEditor -->
+                    </div>
                     
                     <button type="submit" class="btn btn-success">Salvar</button>
                     <a href="{% url 'table_admin' %}" class="btn btn-secondary">Cancelar</a>
