Refactor 'Voltar' button URL in ver_artigos.html template

--- a/apps/conhecimento/templates/ver_artigos.html
+++ b/apps/conhecimento/templates/ver_artigos.html
@@ -13,5 +13,5 @@
     <p>Validade: {{ artigo.validade|date:'d/m/Y H:i' }}</p>
   {% endif %}
 
-  <a href="{% url 'artigos' %}" class="btn btn-secondary">Voltar</a>
+  <a href="{% url 'table_admin' %}" class="btn btn-secondary">Voltar</a>
 {% endblock %}
