Refactor view_meumodelo.html to update the 'Voltar' button URL

--- a/apps/conhecimento/templates/view_meumodelo.html
+++ b/apps/conhecimento/templates/view_meumodelo.html
@@ -16,7 +16,7 @@
           <p><strong>Usuário Criador:</strong> {{ item.usuario_criador }}</p>
           <p><strong>Data de Criação:</strong> {{ item.data_created|date:'d/m/Y H:i' }}</p>
           <p><strong>Data de Atualização:</strong> {{ item.data_updated|date:'d/m/Y H:i' }}</p>
-          <a href="{% url 'index' %}" class="btn btn-secondary">Voltar</a>
+          <a href="{% url 'artigo' %}" class="btn btn-secondary">Voltar</a>
         </div>
       </div>
     </div>
